--- a/templates/profile_delete.html
+++ b/templates/profile_delete.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Delete Profile</title>
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
@@ -26,21 +26,19 @@
             text-align: center;
             color: #34eb9e;
         }
+        p {
+            color: #fff;
+            margin-bottom: 20px;
+        }
         form {
             margin-top: 20px;
         }
-        input[type="text"],
-        input[type="password"],
         button {
             width: 100%;
             padding: 10px;
-            margin-bottom: 10px;
+            margin-top: 10px;
             border: none;
             border-radius: 5px;
-            box-sizing: border-box;
-            font-family: "Nanum Gothic Coding", monospace;
-        }
-        button {
             background-color: #34eb9e;
             color: #fff;
             cursor: pointer;
@@ -48,16 +46,6 @@
         }
         button:hover {
             background-color: #011a0f;
-        }
-        .register-link {
-            display: block;
-            text-align: center;
-            margin-top: 20px;
-            color: #34eb9e;
-            text-decoration: none;
-        }
-        .register-link:hover {
-            text-decoration: underline;
         }
 
         .hacker-icon {
@@ -74,14 +62,12 @@
     <i class="fas fa-user-secret hacker-icon"></i>
 
     <div class="container">
-        <h2>Login</h2>
+        <h2>Delete Profile</h2>
+        <p>Are you sure you want to delete your profile?</p>
         <form method="post">
             {% csrf_token %}
-            <input type="text" name="username" placeholder="Username">
-            <input type="password" name="password" placeholder="Password">
-            <button type="submit">Login</button>
+            <button type="submit">Delete</button>
         </form>
-        <a href="{% url 'registration' %}" class="register-link">Don't have an account? Register here</a>
     </div>
 </body>
 </html>
