--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
 
         if (message.includes("Sure! Here's the link")) {
           const linkElement = document.createElement("a");
-          linkElement.setAttribute("href", "http://localhost:8000/login");
+          linkElement.setAttribute("href", "http://localhost:8000/registration");
           linkElement.style.color = "#34eb9e";
           linkElement.style.textDecoration = "underline";
           linkElement.textContent = "Sure! Here's the link";
