Added picture logic and some fixed

--- a/templates/ddos.html
+++ b/templates/ddos.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,144 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Oswald:wght@200&display=swap");
-      body {
-        font-family: "Nanum Gothic Coding", monospace;
-        background-color: #222121;
-        margin: 0;
-        padding: 20px;
-        position: relative;
-      }
-      .container {
-        max-width: 600px;
-        margin: 50px auto;
-        padding: 20px;
-        background-color: #575757;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        position: relative;
-        color: #34eb9e;
-      }
-      h1 {
-        text-align: center;
-        color: #34eb9e;
-      }
-      .data-container {
-        margin-top: 20px;
-      }
-      .data-item {
-        margin-bottom: 10px;
-      }
-      .data-label {
-        font-weight: bold;
-      }
-      input[type="text"] {
-        width: 100%;
-        padding: 8px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-        margin-top: 10px;
-        font-family: "Nanum Gothic Coding", monospace;
-      }
-
-      .attack-button {
-        display: block;
-        width: 100%;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        background-color: #34eb9e;
-        color: white;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-        margin-top: 20px;
-        font-family: "Nanum Gothic Coding", monospace;
-        transition: background-color 0.3s ease;
-      }
-      .attack-button:hover {
-        background-color: #016114;
-      }
-      .hacker-icon {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        color: #34eb9e;
-        font-size: 24px;
-      }
-
-      .menu-icon {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        color: #34eb9e;
-        font-size: 24px;
-        cursor: pointer;
-        z-index: 999;
-      }
-      .menu {
-        position: absolute;
-        top: 50px;
-        right: 20px;
-        background-color: #575757;
-        padding: 10px;
-        border-radius: 5px;
-        display: none;
-        z-index: 998;
-      }
-      .menu-item {
-        padding: 5px 0;
-        color: #fff;
-        cursor: pointer;
-      }
-      .menu-item:hover {
-        text-decoration: underline;
-      }
-
-      .logout-item {
-        position: absolute;
-        top: 50px;
-        right: 60px;
-        color: #34eb9e;
-        font-size: 16px;
-        cursor: pointer;
-        z-index: 999;
-      }
-
-      .open-account-item {
-        position: absolute;
-        top: 80px;
-        right: 60px;
-        color: #34eb9e;
-        font-size: 16px;
-        cursor: pointer;
-        z-index: 999;
-      }
-
-      .light-theme {
-        background-color: #ffffff;
-        color: #222121;
-      }
-      .theme-icon {
-        position: absolute;
-        top: 20px;
-        right: 50px;
-        color: #34eb9e;
-        font-size: 24px;
-        cursor: pointer;
-        z-index: 999;
-      }
-      .light-theme h1 {
-        color: #000000;
-      }
-
-      .light-theme .attack-button {
-        background-color: #000000;
-        color: #ffffff;
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/ddos.css' %}" />
+     
   </head>
   <body>
     <i class="fas fa-user-secret hacker-icon"></i>
@@ -181,91 +46,6 @@
     <div class="menu" id="menu">
       <div class="menu-item"><a href="{% url 'profile_created' %}">Open Account</a></div>
     </div>
-    <script>
-      function launchAttack() {
-        var target = document.getElementById("target").value;
-        var numRequests = document.getElementById("requests").value;
-
-        
-        fetch("/launch_attack/", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/x-www-form-urlencoded", 
-            "X-CSRFToken": getCookie("csrftoken"),
-          },
-          body:
-            "target=" +
-            encodeURIComponent(target) +
-            "&requests=" +
-            encodeURIComponent(numRequests), 
-        })
-          .then((response) => {
-            if (response.ok) {
-              alert("Attack launched successfully!");
-            } else {
-              alert("Error launching attack.");
-            }
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-            alert("Error launching attack.");
-          });
-      }
-
-      function toggleMenu() {
-        var menu = document.getElementById("menu");
-        if (menu.style.display === "block") {
-          menu.style.display = "none";
-        } else {
-          menu.style.display = "block";
-        }
-      }
-
-      function toggleTheme() {
-        var body = document.body;
-        var hackerIcon = document.querySelector(".hacker-icon");
-        var menuIcon = document.querySelector(".menu-icon");
-        var themeIcon = document.querySelector(".theme-icon");
-        var container = document.querySelector(".container");
-
-        if (body.classList.contains("dark-theme")) {
-          body.classList.remove("dark-theme");
-          body.classList.add("light-theme");
-          hackerIcon.style.color = "#222121";
-          menuIcon.style.color = "#222121";
-          themeIcon.classList.remove("fa-sun");
-          themeIcon.classList.add("fa-moon");
-          themeIcon.style.color = "#000000";
-          container.style.backgroundColor = "#ffffff";
-        } else {
-          body.classList.remove("light-theme");
-          body.classList.add("dark-theme");
-          hackerIcon.style.color = "#34eb9e";
-          menuIcon.style.color = "#34eb9e";
-          themeIcon.classList.remove("fa-moon");
-          themeIcon.classList.add("fa-sun");
-          themeIcon.style.color = "#34eb9e";
-          container.style.backgroundColor = "#575757";
-        }
-      }
-
-     
-      function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== "") {
-          var cookies = document.cookie.split(";");
-          for (var i = 0; i < cookies.length; i++) {
-            var cookie = cookies[i].trim();
-            if (cookie.substring(0, name.length + 1) === name + "=") {
-              cookieValue = decodeURIComponent(
-                cookie.substring(name.length + 1)
-              );
-              break;
-            }
-          }
-        }
-        return cookieValue;
-      }
-    </script>
+    <script src="{% static 'js/ddos.js' %}"></script>
   </body>
 </html>
