--- a/templates/profile_delete.html
+++ b/templates/profile_delete.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,56 +7,7 @@
     <title>Delete Profile</title>
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Oswald:wght@200&display=swap");
-        body {
-            font-family: "Nanum Gothic Coding", monospace;
-            background-color: #222121;
-            padding: 20px;
-            position: relative;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            background-color: #575757;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-            color: #34eb9e;
-        }
-        p {
-            color: #fff;
-            margin-bottom: 20px;
-        }
-        form {
-            margin-top: 20px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #34eb9e;
-            color: #fff;
-            cursor: pointer;
-            font-family: "Nanum Gothic Coding", monospace;
-        }
-        button:hover {
-            background-color: #011a0f;
-        }
-
-        .hacker-icon {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #34eb9e;
-            font-size: 24px;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/profile_delete.css' %}" />
 </head>
 <body>
 
