--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -1,83 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Profile</title>
- 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Oswald:wght@200&display=swap");
-        body {
-            font-family: "Nanum Gothic Coding", monospace;
-            background-color: #222121;
-            padding: 20px;
-            position: relative;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            background-color: #575757;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-            color: #34eb9e;
-        }
-        form {
-            margin-top: 20px;
-        }
-        label {
-            color: #34eb9e;
-        }
-        textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            border-radius: 5px;
-            box-sizing: border-box;
-            font-family: "Nanum Gothic Coding", monospace;
-            resize: vertical;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #34eb9e;
-            color: #fff;
-            cursor: pointer;
-            font-family: "Nanum Gothic Coding", monospace;
-        }
-        button:hover {
-            background-color: #011a0f;
-        }
 
-        .hacker-icon {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #34eb9e;
-            font-size: 24px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'css/profile_update.css' %}" />
 </head>
 <body>
-
     <i class="fas fa-user-secret hacker-icon"></i>
 
     <div class="container">
         <h2>Update Your Profile</h2>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="bio">Bio:</label><br>
-            <textarea id="bio" name="bio" rows="4" cols="50">{{ bio }}</textarea><br>
+            {{ form.as_p }}
             <button type="submit">Update</button>
         </form>
-    </div>
-</body>
-</html>
+        <a href="{% url 'profile_created' %}" class="back-button">Back to Profile</a>
+    </body>
+    </html>
