--- a/templates/profile_created.html
+++ b/templates/profile_created.html
@@ -1,91 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Created</title>
-    
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Oswald:wght@200&display=swap");
-        body {
-            font-family: "Nanum Gothic Coding", monospace;
-            background-color: #222121;
-            padding: 20px;
-            position: relative;
-        }
+    <link rel="stylesheet" href="{% static 'css/profile_created.css' %}" />
+  </head>
+  <body>
+    <i class="fas fa-user-secret hacker-icon"></i>
 
-        .hacker-icon {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #34eb9e;
-            font-size: 24px;
-        }
-
-        .profile-container {
-            width: 50%;
-            margin: auto;
-            margin-top: 50px;
-            background-color: #575757;
-            border: 1px solid #34eb9e;
-            border-radius: 5px;
-            padding: 20px;
-            box-sizing: border-box;
-            color: #34eb9e;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        p {
-            margin-bottom: 10px;
-        }
-
-        .bio-input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            margin-top: 10px;
-            font-family: "Nanum Gothic Coding", monospace;
-            resize: vertical;
-        }
-
-        .save-button {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            margin-top: 10px;
-            background-color: #34eb9e;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-family: "Nanum Gothic Coding", monospace;
-            transition: background-color 0.3s ease;
-        }
-
-        .save-button:hover {
-            background-color: #011a0f;
-        }
-    </style>
-</head>
-<body>
-
-<i class="fas fa-user-secret hacker-icon"></i>
-
-<div class="profile-container">
-    <h1>Welcome, {{ username }}!</h1>
-    <p>Your email: {{ email }}</p>
-    <p>Your bio: {{ bio }}</p>
-    <a href="{% url 'update_profile' %}">Update Profile</a><br>
-    <a href="{% url 'delete_profile' %}">Delete Profile</a>
-    <a href="{% url 'ddos' %}">DDoS Attack Page</a>
-</div>
-
-</body>
+    <div class="profile-container">
+      <h1>Welcome, {{ username }}!</h1>
+      <p>Your email: {{ email }}</p>
+      <p>Your bio: {{ bio }}</p>
+      <p>Profile picture:</p>
+      <img src="{{ user.profile.profile_picture.url }}" alt="Profile Picture"  />
+      <div class="menu" id="profile-menu">
+        <a href="{% url 'update_profile' %}">Update Profile</a>
+        <a href="{% url 'delete_profile' %}">Delete Profile</a>
+        <a href="{% url 'ddos' %}">DDoS Attack Page</a>
+      </div>
+      <div class="show-menu" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+      </div>
+    </div>
+    <script src="{% static 'js/profile_created.js' %}"></script>
+    
+  </body>
 </html>
