--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
     <div class="users">
       <div id="user1">
-        <h2>ADFGHJ</h2>
+        <h2>SECRET USER</h2>
         <div id="user1-messages"></div>
         <input
           type="text"
@@ -29,7 +29,7 @@
         <button id="send-button">Send</button>
       </div>
       <div id="user2">
-        <h2>PLKJHG</h2>
+        <h2>SECRET USER</h2>
         <div id="user2-messages"></div>
       </div>
     </div>
