--- a/templates/profile_created.html
+++ b/templates/profile_created.html
@@ -27,6 +27,7 @@
         <a href="{% url 'update_profile' %}">Update Profile</a>
         <a href="{% url 'delete_profile' %}">Delete Profile</a>
         <a href="{% url 'ddos' %}">DDoS Attack Page</a>
+        <a href="{% url 'logout' %}">Logout</a> 
       </div>
       <div class="show-menu" onclick="toggleMenu()">
         <i class="fas fa-bars"></i>
