--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,18 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-    <link rel="stylesheet" href="{% static 'css/registration.css' %}" />
-
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+</head>
+<body>
     <div class="container">
         <i class="fas fa-user-secret hacker-icon"></i>
         <h2>Registration</h2>
@@ -35,7 +31,10 @@
                 <button type="submit" id="registerButton">Register</button>
             </div>
         </form>
+        <div class="login-link">
+            <p>Do you have an account? <a href="{% url 'login_view' %}">Login here</a></p>
+        </div>
     </div>
     <script src="{% static 'js/registration.js' %}"></script>
-  </body>
+</body>
 </html>
