--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,40 +1,46 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="{% static 'css/registration.css' %}">
 </head>
+
 <body>
-    <div class="container">
-        <i class="fas fa-user-secret hacker-icon"></i>
-        <h2>Registration</h2>
-        <form id="registerForm" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required />
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required />
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required />
-                <span class="error" id="passwordError"></span>
-            </div>
-            <div class="form-group">
-                <button type="submit" id="registerButton">Register</button>
-            </div>
-        </form>
-        <div class="login-link">
-            <p>Do you have an account? <a href="{% url 'login_view' %}">Login here</a></p>
-        </div>
+  <div class="container">
+    <i class="fas fa-user-secret hacker-icon"></i>
+    <h2>Registration</h2>
+    {% if error_message %}
+    <p class="error">{{ error_message }}</p>
+    {% endif %}
+    <form id="registerForm" method="post">
+      {% csrf_token %}
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required />
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required />
+        <span class="error" id="passwordError"></span>
+      </div>
+      <div class="form-group">
+        <button type="submit" id="registerButton">Register</button>
+      </div>
+    </form>
+    <div class="login-link">
+      <p>Do you have an account? <a href="{% url 'login_view' %}">Login here</a></p>
     </div>
-    <script src="{% static 'js/registration.js' %}"></script>
+  </div>
+  <script src="{% static 'js/registration.js' %}"></script>
 </body>
+
 </html>
